# Vlasov_Maxwell_instabilities_control

./: README.md  pyproject.toml  reproduce_all_results.ipynb  requirements.txt
data/: paper_metadata.json
data/precomputed/: two_stream_landscapes.npz  two_stream_optimization.npz  weibel_deviation_histories.npz  weibel_dispersion_grid.npz  weibel_fig4_histories.npz  weibel_landscape_deltaK.npz  weibel_no_control_distribution_samples.npz
scripts/: optimize_adam_two_stream_adaptive.py  optimize_adam_two_stream_initial.py  optimize_armijo_two_stream_initial.py  optimize_two_stream_nn.py  reproduce_all_figures.py  train_rl.py
vm_control/: __init__.py  data.py  dispersion.py  experiments.py  optimizer_adam.py  optimizer_armijo.py  optimizer_objectives.py  plotting.py  profiles.py  simple_nn.py  solver.py
vm_control/rl/: two_stream_env.py
