[project]
name = "vm-control-repro"
version = "0.1.0"
description = "Reproducibility package for Vlasov-Maxwell plasma-instability control experiments"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "jax>=0.4",
  "jaxlib>=0.4",
]

[tool.setuptools]
packages = ["vm_control"]
